[package]
name = "hawk-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json"] }
tokio = { version = "1.38", features = ["full"] }
futures = "0.3.30"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
