[package]
name = "hawk-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-prng = "0.2.1"
criterion = { version = "0.5.1", features = ["async_tokio"] }
dotenvy = "0.15"
eyre = "0.6"
futures = "0.3.30"
rand = "0.8"
rand_core = "0.6.4"
sqlx = { version = "~0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "json",
    "sqlite",
] }
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }

[features]
db_dependent = []

[[bench]]
name = "hnsw"
harness = false
